<resources>
    <string name="app_name">EduWalk</string>

    <!-- Login -->
    <string name="login">Prijavi se</string>
    <string name="login_helper_text">Najviše 50 znakova</string>
    <string name="username">Korisničko ime</string>

    <!-- Home -->
    <string name="create_new_routes">Stvori novu rutu</string>
    <string name="logout">Odjavi se</string>
    <string name="my_routes">Moje rute</string>
    <string name="start_new_walk">Započni novu šetnju</string>
    <string name="old_walks">Prijašnje šetnje</string>
    <string name="welcome_teacher_title">Dobrodošli, %s</string>
    <string name="welcome_student_title">Bok, %s :D</string>

    <!-- Start New Walk -->
    <string name="insert_walk_id_hint">Unesi šifru šetnje</string>
    <string name="insert_walk_id_helper_text">Mora sadržavati 8 znakova</string>
    <string name="start_walk">Započni šetnju</string>
    <string name="or">ili</string>
    <string name="choose_default_walk">Odaberi jednu od javno dostupnih šetnji</string>

    <!-- Walk -->
    <string name="walk_id">Šifra: %s</string>
    <string name="walk_score">Rezultat: %d/%d</string>

    <!-- Rationale -->
    <string name="rationale_explanation">Nećete moći prisustvovati šetnjama ukoliko ne omogućite korištenje Vaše lokacije!</string>
    <string name="rationale_okay">U redu</string>
    <string name="rationale_please_enable_permission">Molim Vas omogućite korištenje Vaše lokacije u postavkama aplikacije. Hvala :D</string>
    <string name="rationale_warning">Upozorenje!</string>

    <!-- Leaderboard -->
    <string name="leaderboard_title">Najbolji igrači su…</string>

    <!-- Location -->
    <string name="best_score">Najbolji rezultat: %d/3</string>
    <string name="best_score_unknown">Najbolji rezultat: nepoznat</string>
    <string name="go_to_quiz">Idi na kviz</string>

    <!-- Quiz -->
    <string name="continue_quiz">Nastavi kviz</string>
    <string name="do_you_want_to_exit_quiz">Ako prekineš kviz, neće se zapamtiti posljednji reultati!</string>
    <string name="next_question">Sljedeće pitanje</string>
    <string name="start_quiz">Započni kviz</string>
    <string name="start_the_quiz_when_ready">Start the quiz when you\'re ready!</string>
    <string name="quit_quiz">Završi kviz</string>
    <string name="question_number">%d. Pitanje</string>

    <!-- Old Walks -->
    <string name="choose_old_walk">Nastavi s jednom od ranije započetih šetnji</string>

    <!-- Create/Edit Walk -->
    <string name="cancel">Odustani</string>
    <string name="create_walk">Stvori rutu</string>
    <string name="edit_walk_description_hint_text">Opis i informacije o ruti</string>
    <string name="edit_walk_do_you_want_to_exit">Ako napustiš ekran, neće se zapamtiti posljednje promjene!</string>
    <string name="edit_walk_title_helper_text">Najviše 100 znakova</string>
    <string name="edit_walk_title_hint_text">Naziv rute</string>
    <string name="no_number_of_characters_limit">Tekst može biti proizvoljno dugačak</string>
    <string name="save_changes">Spremi promjene</string>
    <string name="quit">Izađi</string>

    <!-- My Walks -->
    <string name="choose_my_walk">Pregledaj i uredi jednu od svojih ruta</string>

    <!-- Route -->
    <string name="do_you_want_to_delete_route">Želiš li stvarno obrisati ovu rutu?</string>
    <string name="no">Ne</string>
    <string name="yes">Da</string>

    <!-- Create/Edit Location -->
    <string name="create_location">Stvori lokaciju</string>
    <string name="do_you_want_to_delete_location">Želiš li stvarno obrisati ovu lokaciju?</string>
    <string name="edit_location_description_hint_text">Opis i informacije o lokaciji</string>
    <string name="edit_location_do_you_want_to_exit">Ako napustiš ekran, neće se zapamtiti posljednje promjene!</string>
    <string name="edit_location_title_helper_text">Najviše 200 znakova</string>
    <string name="edit_location_title_hint_text">Naziv lokacije</string>
    <string name="edit_location_threshold_text">Min. udaljenost od lokacije: %d metara</string>
    <string name="edit_location_threshold_helper_text">Mora biti cijeli broj</string>
    <string name="edit_location_questions">Upravljaj pitanjima</string>

    <!-- Add Questions -->
    <string name="add_question">Dodaj pitanje</string>
    <string name="do_you_want_to_delete_question">Želiš li stvarno obrisati ovo pitanje?</string>
    <string name="no_questions_yet">Ne postoji nijedno pitanje vezano uz ovu lokaciju!</string>

    <!-- Edit Question -->
    <string name="create_question">Stvori pitanje</string>
    <string name="correct_answer">Točan odgovor na pitanje</string>
    <string name="given_answers">Ponuđeni odgovori:</string>
    <string name="min_max_answers">(minimalno 2, maksimalno 5)</string>
    <string name="possible_answer">Potencijalni odgovor na pitanje</string>
    <string name="write_question_here">Ovdje napišite pitanje</string>

</resources>
