<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/welcome_home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/start_new_walk_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Dobrodošao suki7 :D" />

    <Button
        android:id="@+id/start_new_walk_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_button_height"
        android:text="@string/start_new_walk"
        app:layout_constraintBottom_toTopOf="@id/create_new_walk_button"
        app:layout_constraintEnd_toStartOf="@id/old_walks_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/old_walks_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_button_height"
        android:text="@string/old_walks"
        app:layout_constraintBottom_toBottomOf="@id/start_new_walk_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_new_walk_button"
        app:layout_constraintTop_toTopOf="@id/start_new_walk_button"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/create_new_walk_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_button_height"
        android:layout_marginTop="24dp"
        android:text="@string/create_new_routes"
        app:layout_constraintBottom_toTopOf="@id/logout_button"
        app:layout_constraintEnd_toStartOf="@id/my_walks_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_new_walk_button"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/my_walks_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_button_height"
        android:text="@string/my_routes"
        app:layout_constraintBottom_toBottomOf="@id/create_new_walk_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/create_new_walk_button"
        app:layout_constraintTop_toTopOf="@id/create_new_walk_button"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/home_button_height"
        android:layout_marginTop="24dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_walk_button"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/teacher_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="create_new_walk_button, my_walks_button" />

</androidx.constraintlayout.widget.ConstraintLayout>