<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background_light">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/edit_location_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_location_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_outline_8_radius"
                android:paddingHorizontal="151dp"
                android:paddingVertical="76dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_image"
                android:visibility="gone"
                tools:ignore="ContentDescription"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/location_image"
                android:layout_width="@dimen/dialog_illustration_width"
                android:layout_height="@dimen/image_height"
                android:scaleType="fitCenter"
                android:visibility="gone"
                tools:ignore="ContentDescription"
                tools:src="@drawable/illustration_location_placeholder" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_title_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                android:hint="@string/edit_location_title_hint_text"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="@string/edit_location_title_helper_text"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_text_snippet">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="200" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_description_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:hint="@string/edit_location_description_hint_text"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/no_number_of_characters_limit"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="5"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_threshold_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="16dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="@string/edit_location_threshold_helper_text"
                app:helperTextEnabled="true"
                tools:hint="@string/edit_location_threshold_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_threshold_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_location_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_questions_button"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/create_location" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_questions_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:padding="16dp"
        android:text="@string/edit_location_questions"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_location_button" />

</androidx.constraintlayout.widget.ConstraintLayout>