<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background_light">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/edit_walk_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/walk_id_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                android:textColor="@color/primary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Šifra: testtest" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/walk_title_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/edit_walk_title_hint_text"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="@string/edit_walk_title_helper_text"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_text_snippet">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/walk_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/walk_descritpion_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/edit_walk_description_hint_text"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/no_number_of_characters_limit"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/walk_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="5"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_walk_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/create_walk" />

</androidx.constraintlayout.widget.ConstraintLayout>