<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:paddingHorizontal="24dp"
    android:paddingVertical="12dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:id="@+id/space_before_login_illustration"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/login_illustration"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/illustration_walk_in_the_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space_before_login_illustration"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:hint="@string/username"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="@string/login_helper_text"
                app:helperTextEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_illustration"
                app:layout_constraintVertical_bias="0.25"
                app:startIconDrawable="@drawable/ic_account_circle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:padding="16dp"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>